# movie-ticket-booking

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  coding_convention.md  helloworld  helloworld.cpp  log.txt  movie_ticket_booking  movie_ui  workflow.txt
.devcontainer/: setup.sh
.devcontainer/cpp23/: Dockerfile.cpp23_dev  devcontainer.json
.devcontainer/deploy/: .msmtprc  Dockerfile.deploy  devcontainer.json  start-mysql.sh
.devcontainer/mysql-cpp23-dev/: Dockerfile.mysql_cpp23_dev  devcontainer.json
.devcontainer/mysql-dev/: Dockerfile.mysql_dev  devcontainer.json  start-mysql.sh
include/DAL/: DatabaseManager.h
include/app/: App.h  RepositoryRegistry.h
include/models/: Movie.h  MovieTheater.h  Result.h  Room.h  Seat.h  SeatSchedule.h  ShowTime.h  Ticket.h  User.h
include/repositories/: BaseRepository.h  DatabaseManager.h  IRepository.h  MovieRepositories.h  MovieRepository.h  MovieTheaterRepository.h  Result.h  RoomRepositories.h  RoomRepository.h  SeatRepository.h  SeatScheduleRepository.h  ShowTimeRepository.h  TicketRepository.h  UserRepository.h
include/services/: BookTicketCommand.h  EmailService.h  FilterMovieCommand.h  ICommand.h  MenuInvoker.h  MovieManageCommand.h  MovieService.h  RoomManageCommand.h  RoomService.h  ShowTicketCommand.h  ShowTimeManageCommand.h  ShowTimeService.h  TheaterManageCommand.h  TheaterService.h  TicketService.h  UserService.h  ViewMovieCommand.h
include/utils/: CultureFormatter.h  Logger.h  (+7 more)
release/: init_db.sql  log.txt  movie_ticket_booking  movie_ticket_booking_ui
sql_scripts/: init_db.sql
src/: main.cpp
(+77 files in other folders)
